hit a styling snag with mdx components

--- a/@pauliescanlon/gatsby-theme-terminal/src/pages/index.mdx
+++ b/@pauliescanlon/gatsby-theme-terminal/src/pages/index.mdx
@@ -1,1 +1,5 @@
-# Index from theme
+---
+navigationLabel: dummy
+---
+
+This is a dummy hidden page containing required frontmatter. It's filtered out but matching the navigationLabel DefaultLayout => MdxRoutes don/'t remove it
