--- a/demo/src/pages/markdown.mdx
+++ b/demo/src/pages/markdown.mdx
@@ -8,41 +8,41 @@ gatsby-theme-terminal supports the full set of [markdown shortcodes](https://git
 
 <hr />
 
-## Headers
+## Heading
 
 ```
-# H1
-## H2
-### H3
-#### H4
-##### H5
-###### H6
+# h1
+## h2
+### h3
+#### h4
+##### h5
+###### h6
 
-Alternatively, for H1 and H2, an underline-ish style:
+Alternatively, for h1 and h2, an underline-ish style:
 
-Alt-H1
+Alt-h1
 ======
 
-Alt-H2
+Alt-h2
 ```
 
-# H1
+# h1
 
-## H2
+## h2
 
-### H3
+### h3
 
-#### H4
+#### h4
 
-##### H5
+##### h5
 
-###### H6
+###### h6
 
-Alternatively, for H1 and H2, an underline-ish style:
+Alternatively, for h1 and h2, an underline-ish style:
 
-# Alt-H1
+# Alt-h1
 
-Alt-H2
+Alt-h2
 
 <!-- TODO Emphasis not working -->
 <!-- ## Emphasis
