add style to SourceLayout

--- a/demo/src/pages/components.mdx
+++ b/demo/src/pages/components.mdx
@@ -273,6 +273,46 @@ If you'd like to see the default theme `.js` that file can be found in [here](ht
 
 <Link href='#!'>Hello</Link>
 
+
+<Divider />
+
+## Badge
+
+```javascript
+<Badge variant='primary' mb={2} mr={2}>
+  Beep boop, this is an badge!
+</Badge>
+
+<Badge variant='secondary' mb={2} mr={2}>
+  Beep boop, this is an badge!
+</Badge>
+
+<Badge variant='success' mb={2} mr={2}>
+  Beep boop, this is an badge!
+</Badge>
+
+<Badge variant='error'>
+  Beep boop, this is an badge!
+</Badge>
+```
+
+<Badge variant='primary' mb={2} mr={2}>
+  Beep boop, this is an badge!
+</Badge>
+
+<Badge variant='secondary' mb={2} mr={2}>
+  Beep boop, this is an badge!
+</Badge>
+
+<Badge variant='success' mb={2} mr={2}>
+  Beep boop, this is an badge!
+</Badge>
+
+<Badge variant='error'>
+  Beep boop, this is an badge!
+</Badge>
+
+
 <Divider />
 
 ## Image
