--- a/demo/src/pages/markdown.mdx
+++ b/demo/src/pages/markdown.mdx
@@ -8,7 +8,7 @@ gatsby-theme-terminal supports the full set of [markdown shortcodes](https://git
 
 <hr />
 
-## Heading
+## [Heading](#heading)
 
 ```
 # h1
@@ -40,7 +40,8 @@ Alt-h2
 
 Alternatively, for h1 and h2, an underline-ish style:
 
-# Alt-h1
+
+## [Alt-h1](#alt-h1)
 
 Alt-h2
 
@@ -67,7 +68,7 @@ Strikethrough uses two tildes. Scratch this. -->
 
 <hr />
 
-## Lists
+## [Lists](#lists)
 
 (In this example, leading and trailing spaces are shown with with dots: ⋅)
 
@@ -100,7 +101,7 @@ Strikethrough uses two tildes. Scratch this. -->
 
 <hr />
 
-## Links
+## [Links](#links)
 
 There are two ways to create links.
 
@@ -150,7 +151,7 @@ Some text to show that the reference links can follow later.
 [1]: http://slashdot.org
 [link text itself]: http://www.reddit.com
 
-## Images
+## [Images](#images)
 
 ```
 Here's our logo (hover to see the title text):
@@ -174,7 +175,7 @@ Reference-style:
 
 [logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 2"
 
-## Code and Syntax Highlighting
+## [Code and Syntax Highlighting](#code-and-syntax-highlighting)
 
 Code blocks are part of the Markdown spec, but syntax highlighting isn't.
 
@@ -264,7 +265,7 @@ raw Markdown line up prettily. You can also use inline Markdown.
 | _Still_  | `renders` | **nicely** |
 | 1        | 2         | 3          | -->
 
-## Blockquotes
+## [Blockquotes](#blockquotes)
 
 ```
 > Blockquotes are very handy in email to emulate reply text.
@@ -283,7 +284,7 @@ Quote break.
 > This is a very long line that will still be quoted properly when it wraps. Oh boy let's keep writing to make sure this is long enough to actually wrap for everyone. Oh, you can _put_ **Markdown** into a blockquote.
 
 
-## Inline HTML
+## [Inline HTML](#inline-html)
 
 You can also use raw HTML in your Markdown, and it'll mostly work pretty well.
 
