add headings to component styles

--- a/demo/src/pages/components.mdx
+++ b/demo/src/pages/components.mdx
@@ -257,22 +257,13 @@ If you'd like to see the default theme `.js` that file can be found in [here](ht
 ## [Text](#text)
 
 ```javascript
-<Text
-  sx={{
-    fontWeight: 'bold',
-  }}>
-  Hello
-</Text>
-<Text variant='caps'>Hello</Text>
+
+<Text>Hello</Text>
+<Text variant='styles.small'>Hello</Text>
 ```
 
-<Text
-  sx={{
-    fontWeight: 'bold',
-  }}>
-  Hello
-</Text>
-<Text variant='caps'>Hello</Text>
+<Text>Hello</Text>
+<Text variant='styles.small'>Hello</Text>
 
 <Divider />
 
