--- a/demo/src/pages/index.mdx
+++ b/demo/src/pages/index.mdx
@@ -136,11 +136,11 @@ Here we use it to return all the `projects` by using the filter prop
   <Heading variant='styles.h2'>Experience</Heading>
 
   <Text>Company A</Text>
-  <Text variant='text.muted'>Feb 2019 - Feb 2020</Text>
+  <Text variant='styles.small'>Feb 2019 - Feb 2020</Text>
   <Divider />
 
   <Text>Company B</Text>
-  <Text variant='text.muted'>Feb 2018 - Jan 2020</Text>
+  <Text variant='styles.small'>Feb 2018 - Jan 2020</Text>
   <Divider />
   <Divider />
   </Box>
@@ -153,11 +153,11 @@ Here we use it to return all the `projects` by using the filter prop
   <Heading variant='styles.h2'>Speaking</Heading>
 
   <Text>Conference A</Text>
-  <Text variant='text.muted'>Feb 2020</Text>
+  <Text variant='styles.small'>Feb 2020</Text>
   <Divider />
 
   <Text>Conference B</Text>
-  <Text variant='text.muted'>Jan 2020</Text>
+  <Text variant='styles.small'>Jan 2020</Text>
   <Divider />
   <Divider />
   </Box>
@@ -170,11 +170,11 @@ Here we use it to return all the `projects` by using the filter prop
   <Heading variant='styles.h2'>Accolades</Heading>
 
   <Text>Some Award A</Text>
-  <Text variant='text.muted'>Feb 2020</Text>
+  <Text variant='styles.small'>Feb 2020</Text>
   <Divider />
 
   <Text>Some Award B</Text>
-  <Text variant='text.muted'>Jan 2020</Text>
+  <Text variant='styles.small'>Jan 2020</Text>
   <Divider />
   <Divider />
   </Box>
