--- a/demo/src/posts/2019/post-2.mdx
+++ b/demo/src/posts/2019/post-2.mdx
@@ -1,6 +1,6 @@
 ---
 title: Post 2
-tags: ["React", "GatsbyJs", "ES6", "theme-ui"]
+tags: ['React', 'GatsbyJs', 'ES6', 'theme-ui']
 featuredImage: markus-spiske-70Rir5vB96U-unsplash.jpg
 ---
 
