--- a/demo/src/posts/2020/01/post-3.mdx
+++ b/demo/src/posts/2020/01/post-3.mdx
@@ -1,6 +1,6 @@
 ---
 title: Post 3
-tags: ['React', 'GatsbyJs', 'HTML']
+tags: ['React', 'HTML']
 featuredImage: florian-olivo-Ek9Znm8lQ1U-unsplash.jpg
 ---
 
