amend sipaces around markdown

--- a/demo/src/pages/components.mdx
+++ b/demo/src/pages/components.mdx
@@ -2,7 +2,7 @@
 navigationLabel: Components
 ---
 
-# gatsby-theme-terminal
+# [gatsby-theme-terminal](#-gatsby-theme-terminal)
 
 gatsby-theme-terminal has some of it's own components, and below is how you use them.
 
@@ -40,7 +40,7 @@ By default the source list returns all `.mdx` found from the directories defined
 
 <Divider />
 
-### [SourceList filter](#source-list-filter)
+## [SourceList filter](#source-list-filter)
 
 You can filter the data returned by the `<SourceList />` component by defining a source with the `filter` prop.
 
@@ -195,7 +195,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
 
 <Divider />
 
-# theme-ui/components
+# [theme-ui/components](#theme-ui-components)
 
 gatsby-theme-terminal also supports the full set of [theme-ui/componets](https://theme-ui.com/components) and below is how you use them.
 
