--- a/demo/src/pages/index.mdx
+++ b/demo/src/pages/index.mdx
@@ -25,8 +25,9 @@ Write anything you want in `src/pages/index.mdx` and it'll go here.
       mb: 3,
       pr: [0,0, 4],
     }}
-  >          
-  <Heading variant='styles.h2'>Contact</Heading>
+  >         
+
+  ## Contact
 
   <Heading variant='styles.h3' sx={{mb: 0}}>Email</Heading>
   <Link href='mailto:pauliescanlon@gmail.com' variant='styles.a'>pauliescanlon@gmail.com</Link>
@@ -52,7 +53,9 @@ Write anything you want in `src/pages/index.mdx` and it'll go here.
       mb: 3
     }}
   >
-  <Heading variant='styles.h2'>Top 5 tags</Heading>
+ 
+
+  ## Top 5 tags
 
   <TagList filter="posts">
     {tags => (
@@ -95,9 +98,8 @@ Write anything you want in `src/pages/index.mdx` and it'll go here.
   </Box>
 </Flex>
 
-<Divider />
 
-<Heading variant='styles.h2'>Projects</Heading>
+## Projects
 
 You can use the `<SourceList filter="projects" />` component from any `.mdx`. 
 
@@ -150,7 +152,8 @@ Here we use it to return all the `projects` by using the filter prop
       width: ["100%", "50%", "33.333%"]
     }}
   >          
-  <Heading variant='styles.h2'>Experience</Heading>
+
+  ## Experience
 
   <Text>Company A</Text>
   <Text variant='styles.small'>Feb 2019 - Feb 2020</Text>
@@ -166,8 +169,9 @@ Here we use it to return all the `projects` by using the filter prop
     sx={{
       width: ["100%", "50%", "33%"]
     }}
-  >          
-  <Heading variant='styles.h2'>Speaking</Heading>
+  >       
+
+  ## Speaking  
 
   <Text>Conference A</Text>
   <Text variant='styles.small'>Feb 2020</Text>
@@ -184,7 +188,8 @@ Here we use it to return all the `projects` by using the filter prop
       width: ["100%", "50%", "33%"]
     }}
   >          
-  <Heading variant='styles.h2'>Accolades</Heading>
+
+  ## Accolades
 
   <Text>Some Award A</Text>
   <Text variant='styles.small'>Feb 2020</Text>
